--- a/Responsive Cards/estilo.css
+++ b/Responsive Cards/estilo.css
@@ -1,38 +1,43 @@
-/*---Default---*/
-.container{
+.container {
     max-width: 1024px;
-    margin: 0 auto;
-    
+    margin: 0 auto; 
 }
-.box{
+
+.box {
     display: flex;
     max-width: 1024px;
     height: 220px;
     margin-bottom: 16px;
-    border: 1px black solid;
+    border: 1px solid #D4D4D4; 
+    gap: 16px;
 }
-img{
+
+img {
     width: 353px;
     height: 188px;
     border-radius: 4px;
-    margin: 16px 0px 16px 16px;
+    margin: 16px;
 }
-.info{
+
+.info {
     margin: 12px 21px 16px 21px;
 }
-h2{
-font-size: 24px;
-line-height: 32px;
-font-weight: 600;
+
+h2 {
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 600;
 }
-p{
+
+p {
     font-size: 16px;
     line-height: 24px;
     font-weight: 400;
     margin-bottom: 30px;
     font-family: Arial, Helvetica, sans-serif;
 }
-.botao{
+
+.botao {
     display: flex;
     width: 100%;
     padding: 12px 0px;
@@ -43,29 +48,35 @@ p{
     margin: 10px 0;
     border-radius: 4px;
 }
-.data{
+
+.data {
     text-align: center;
 }
-@media screen and (max-width:1024px) {
-    .container{
+
+@media screen and (max-width: 1024px) {
+    .container {
         max-width: 360px;
-        height: 458px;
+        height: auto;
+        margin: 0 auto 20px;
     }
-    .box{
+
+    .box {
         width: 360px;
         height: 458px;
         flex-direction: column;
     }
-    img{
+
+    img {
         width: 328px;
         height: 194px;
-        
     }
-    .box .info{
+
+    .box .info {
         width: 328px;
         height: 402px;
     }
-    .botao{
+
+    .botao {
         margin: 10px 0;
         border-radius: 4px;
     }
